docs: sync AGENTS.md with project guidance